fix issue where the app was not exiting properly.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2703,7 +2703,7 @@ def      = false
 [SDTC_BOOL]
 var      = gui.autosave_on_exit
 flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
-def      = false
+def      = true
 cat      = SC_BASIC
 
 [SDTC_VAR]
